Bug 916751:  Do not use nsIFrame::MovePositionBy from nsLineLayout.  r=dholbert

Since bug 916751 is hard (for me) to test, I haven't confirmed for sure
that this fixes the bug.

However, it fixes the assertions that bug 911786 part 3 triggers in
layout/base/crashtests/317934-1.html through this codepath.